--- a/application/templates/application/cadastro.html
+++ b/application/templates/application/cadastro.html
@@ -3,7 +3,7 @@
 <html>
 <head>
     <title>Cadastro de Usuários</title>
-    <link rel="stylesheet" type="text/css" href="{% static 'css/styles.css' %}">
+    <link rel="stylesheet" type="text/css" href="{% static 'css/cadastro.css' %}">
 </head>
 <body>
     <div class="form-container">
