--- a/application/templates/application/home.html
+++ b/application/templates/application/home.html
@@ -9,5 +9,10 @@
 </head>
 <body>
     <h1>Bem-vindo ao VitalHub</h1>
+
+    <div class="menu">
+        <a href="{% url 'users:login' %}">Login</a> |
+        <a href="{% url 'users:cadastrar' %}">Cadastro</a>
+    </div>
 </body>
 </html>
