--- a/application/templates/application/painel_medico.html
+++ b/application/templates/application/painel_medico.html
@@ -1,5 +1,6 @@
+{% load static %}
 {% extends "application/base.html" %}
-
+<link rel="stylesheet" type="text/css" href="{% static 'css/painel_medico.css' %}">
 {% block content %}
 <div class="container-principal">
     <div class="linha">
