--- a/application/templates/application/base.html
+++ b/application/templates/application/base.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <title>VitalHub</title>
-    <link rel="stylesheet" href="{% static 'css/style.css' %}">
+    <link rel="stylesheet" href="{% static 'css/base.css' %}">
 </head>
 <body>
     {% block content %}
