--- a/application/templates/application/home.html
+++ b/application/templates/application/home.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>VitalHub - Bem-vindo</title>
     <link rel="stylesheet" type="text/css" href="{% static 'css/home.css' %}">
+    <script src="https://unpkg.com/htmx.org@1.9.5"></script>
 </head>
 <body>
     <div class="container">
