--- a/application/templates/application/painel_enfermeiro.html
+++ b/application/templates/application/painel_enfermeiro.html
@@ -10,7 +10,7 @@
             <div class="conteudo-menu">
                 <ul class="lista-navegacao">
                     <li class="item-menu">
-                        <a class="link-menu" href="{% url 'application:cadastrar_paciente' %}">
+                        <a class="link-menu" href="{% url 'cadastrar_paciente' %}">
                             <i class="icone-plus"></i> Cadastrar Paciente
                         </a>
                     </li>
