--- a/application/templates/application/cadastrar_paciente.html
+++ b/application/templates/application/cadastrar_paciente.html
@@ -10,5 +10,12 @@
         {{ form.as_p }}
         <button type="submit">Salvar</button>
     </form>
+    {% if messages %}
+    <div class="messages">
+        {% for message in messages %}
+            <div class="alert alert-{{ message.tags }}">{{ message }}</div>
+        {% endfor %}
+    </div>
+    {% endif %}
 </div>
 {% endblock %}
