--- a/application/templates/application/cadastrar_paciente.html
+++ b/application/templates/application/cadastrar_paciente.html
@@ -1,21 +1,29 @@
-{% extends "application/base.html" %}
-{% load static %}
-
-{% block content %}
-<link rel="stylesheet" href="{% static 'css/formulario.css' %}">
-<div class="form-container">
-    <h2>Cadastrar Paciente</h2>
-    <form method="post">
-        {% csrf_token %}
-        {{ form.as_p }}
-        <button type="submit">Salvar</button>
-    </form>
-    {% if messages %}
-    <div class="messages">
-        {% for message in messages %}
-            <div class="alert alert-{{ message.tags }}">{{ message }}</div>
-        {% endfor %}
+<form method="post">
+    {% csrf_token %}
+    
+    <div class="form-group">
+        <label for="nome_completo">Nome completo:</label>
+        <input type="text" name="nome_completo" id="nome_completo" required>
     </div>
-    {% endif %}
-</div>
-{% endblock %}
+
+    <div class="form-group">
+        <label for="cpf">CPF:</label>
+        <input type="text" name="cpf" id="cpf" required>
+    </div>
+
+    <div class="form-group">
+        <label for="data_nascimento">Data de nascimento:</label>
+        <input type="date" name="data_nascimento" id="data_nascimento" required>
+    </div>
+
+    <div class="form-group">
+        <label for="medico_responsavel">Médico responsável:</label>
+        <select name="medico_responsavel" id="medico_responsavel" required>
+            {% for medico in medicos %}
+                <option value="{{ medico.id }}">{{ medico.usuario.nome_completo }}</option>
+            {% endfor %}
+        </select>
+    </div>
+
+    <button type="submit">Cadastrar</button>
+</form>
