--- a/application/templates/application/login.html
+++ b/application/templates/application/login.html
@@ -1,39 +1,27 @@
-{% load static %}
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Login - VitalHub</title>
-    <link rel="stylesheet" type="text/css" href="{% static 'css/login.css' %}">
+    <title>Login</title>
 </head>
 <body>
-    <div class="login-container">
-        <h2>Login</h2>
-        
-        {% if messages %}
+    <h2>Login</h2>
+    <form method="POST">
+        {% csrf_token %}
+        <label for="email">Email:</label>
+        <input type="email" name="email" required><br>
+
+        <label for="password">Senha:</label>
+        <input type="password" name="password" required><br>
+
+        <button type="submit">Entrar</button>
+    </form>
+
+    {% if messages %}
+        <ul>
             {% for message in messages %}
-                <div class="error">{{ message }}</div>
+                <li>{{ message }}</li>
             {% endfor %}
-        {% endif %}
-        
-        <form method="post">
-            {% csrf_token %}
-            
-            <div class="form-group">
-                <label for="id_email">Email:</label>
-                {{ form.email }}
-            </div>
-            
-            <div class="form-group">
-                <label for="id_password">Senha:</label>
-                {{ form.password }}
-            </div>
-            
-            <button type="submit">Entrar</button>
-        </form>
-        
-        <p style="margin-top: 1rem; text-align: center;">
-            Não tem uma conta? <a href="{% url 'users:cadastrar' %}">Cadastre-se</a>
-        </p>
-    </div>
+        </ul>
+    {% endif %}
 </body>
 </html>
