--- a/application/templates/application/medico_consultas.html
+++ b/application/templates/application/medico_consultas.html
@@ -1,17 +1,11 @@
-{% load static %}
-
-<link rel="stylesheet" type="text/css" href="{% static 'css/medico_consultas.css' %}">
-
 <div class="cartao">
     <div class="corpo-cartao">
         {% if consultas %}
-        <div class="lista-consultas">
+        <div class="grade-consultas">
             {% for consulta in consultas %}
             <div class="cartao-consulta">
                 <h2 class="nome-paciente">{{ consulta.paciente.nome_completo }}</h2>
-                <button class="botao-dropdown" onclick="toggleDropdown('{{ consulta.id }}')">
-                    Ver mais
-                </button>
+                <button class="botao-dropdown" data-dropdown-target="dropdown-{{ consulta.id }}">Ver mais</button>
                 <div class="dropdown-info" id="dropdown-{{ consulta.id }}">
                     <p><strong>Data:</strong> {{ consulta.data|date:"d/m/Y H:i" }}</p>
                     <p><strong>Especialidade:</strong> {{ consulta.especialidade }}</p>
@@ -25,10 +19,3 @@
         {% endif %}
     </div>
 </div>
-
-<script>
-    function toggleDropdown(id) {
-        var dropdown = document.getElementById("dropdown-" + id);
-        dropdown.style.display = dropdown.style.display === "block" ? "none" : "block";
-    }
-</script>
