--- a/application/templates/application/painel_medico.html
+++ b/application/templates/application/painel_medico.html
@@ -57,6 +57,15 @@
             titulo.textContent = tipo.charAt(0).toUpperCase() + tipo.slice(1);
         }
     }
+
+    document.addEventListener("click", function (event) {
+        if (event.target.classList.contains("botao-dropdown")) {
+            const cartao = event.target.closest(".cartao-paciente");
+            if (cartao) {
+                cartao.classList.toggle("ativo");
+            }
+        }
+    });
 </script>
 
 {% endblock %}
