Correcao de erros na estilizacao

--- a/application/templates/application/medico_pacientes.html
+++ b/application/templates/application/medico_pacientes.html
@@ -1,3 +1,5 @@
+{% load static %}
+<link rel="stylesheet" href="{% static 'css/medico_pacientes.css' %}">
 <div class="cartao">
     <div class="corpo-cartao">
         {% if pacientes %}
