--- a/application/templates/application/cadastro.html
+++ b/application/templates/application/cadastro.html
@@ -1,7 +1,9 @@
+{% load static %}
 <!DOCTYPE html>
 <html>
 <head>
     <title>Cadastro</title>
+    <link rel="stylesheet" href="{% static 'css/cadastro.css' %}">
 </head>
 <body>
     <h2>Cadastro de Usuário</h2>
